# inspur-oss-cpp-sdk

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Demo/: CMakeLists.txt
Demo/src/: Demo.cc
sdk/: CMakeLists.txt
sdk/include/inspurcloud/oss/: Const.h  Export.h  Global.h  OssClient.h  OssError.h  OssFwd.h  OssRequest.h  OssResponse.h  OssResult.h  ServiceRequest.h  ServiceResult.h  Types.h
sdk/include/inspurcloud/oss/auth/: Credentials.h  CredentialsProvider.h
sdk/include/inspurcloud/oss/client/: AsyncCallerContext.h  ClientConfiguration.h  Error.h  RateLimiter.h  RetryStrategy.h
sdk/include/inspurcloud/oss/http/: HttpType.h
sdk/include/inspurcloud/oss/model/: AbortMultipartUploadRequest.h  AppendObjectRequest.h  AppendObjectResult.h  Bucket.h  CORSRule.h  CompleteMultipartUploadRequest.h  CompleteMultipartUploadResult.h  CopyObjectRequest.h  CopyObjectResult.h  CreateBucketRequest.h  CreateSelectObjectMetaRequest.h  CreateSelectObjectMetaResult.h  CreateSymlinkRequest.h  CreateSymlinkResult.h  DeleteBucketCorsRequest.h  DeleteBucketEncryptionRequest.h  DeleteBucketLifecycleRequest.h  DeleteBucketLoggingRequest.h  DeleteBucketPolicyRequest.h  DeleteBucketRequest.h  DeleteBucketWebsiteRequest.h  DeleteLiveChannelRequest.h  DeleteObjectRequest.h  DeleteObjectTaggingRequest.h  DeleteObjectTaggingResult.h  DeleteObjectsRequest.h  DeleteObjectsResult.h  DownloadObjectRequest.h  GeneratePresignedUrlRequest.h  GenerateRTMPSignedUrlRequest.h  GetBucketAclRequest.h  GetBucketAclResult.h  GetBucketCorsRequest.h  GetBucketCorsResult.h  GetBucketEncryptionRequest.h  GetBucketEncryptionResult.h  GetBucketInfoRequest.h  GetBucketInfoResult.h  GetBucketLifecycleRequest.h  GetBucketLifecycleResult.h  (+84 more)
sdk/include/inspurcloud/oss/utils/: Outcome.h  Runnable.h
sdk/src/: OssClient.cc  OssClientImpl.cc  OssClientImpl.h  OssRequest.cc  OssResponse.cc  ResumableBaseWorker.cc  ResumableBaseWorker.h  ResumableCopier.cc  ResumableCopier.h  ResumableDownloader.cc  ResumableDownloader.h  ResumableUploader.cc  ResumableUploader.h  ServiceRequest.cc
sdk/src/auth/: Credentials.cc  CredentialsProvider.cc  HmacSha1Signer.cc  HmacSha1Signer.h  Signer.cc  Signer.h  SimpleCredentialsProvider.cc  SimpleCredentialsProvider.h
sdk/src/client/: AsyncCallerContext.cc  Client.cc  Client.h  ClientConfiguration.cc
sdk/src/http/: CurlHttpClient.cc  CurlHttpClient.h  HttpClient.cc  HttpClient.h  HttpMessage.cc  HttpMessage.h  HttpRequest.cc  HttpRequest.h  HttpResponse.cc  HttpResponse.h  Url.cc  Url.h
sdk/src/model/: AbortMultipartUploadRequest.cc  AppendObjectRequest.cc  AppendObjectResult.cc  Bucket.cc  CompleteMultipartUploadRequest.cc  CompleteMultipartUploadResult.cc  CopyObjectRequest.cc  CopyObjectResult.cc  CreateBucketRequest.cc  CreateSelectObjectMetaRequest.cc  CreateSelectObjectMetaResult.cc  CreateSymlinkRequest.cc  CreateSymlinkResult.cc  DeleteBucketCorsRequest.cc  DeleteBucketEncryptionRequest.cc  DeleteBucketLifecycleRequest.cc  DeleteBucketLoggingRequest.cc  DeleteBucketPolicyRequest.cc  DeleteBucketWebsiteRequest.cc  DeleteLiveChannelRequest.cc  DeleteObjectTaggingRequest.cc  DeleteObjectsRequest.cc  DeleteObjectsResult.cc  DownloadObjectRequest.cc  GeneratePresignedUrlRequest.cc  GenerateRTMPSignedUrlRequest.cc  GetBucketAclRequest.cc  GetBucketAclResult.cc  GetBucketCorsRequest.cc  GetBucketCorsResult.cc  GetBucketEncryptionRequest.cc  GetBucketEncryptionResult.cc  GetBucketInfoRequest.cc  GetBucketInfoResult.cc  GetBucketLifecycleRequest.cc  GetBucketLifecycleResult.cc  GetBucketLocationRequest.cc  GetBucketLocationResult.cc  GetBucketLoggingRequest.cc  GetBucketLoggingResult.cc  (+76 more)
sdk/src/utils/: Crc32.cc  Crc32.h  Crc64.cc  Crc64.h  Executor.cc  Executor.h  FileSystemUtils.cc  FileSystemUtils.h  LogUtils.cc  LogUtils.h  Runnable.cc  SignUtils.cc  SignUtils.h  StreamBuf.h  Utils.cc  Utils.h
